<resources>
    <string name="app_name">Math Quiz By Amin Amani</string>
    <string name="back">Back</string>
    <string name="score">Score:</string>
    <string name="percentage_default">00%</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="register">Register:</string>
    <string name="all">All</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="quiz_results_and_score"><![CDATA[Quiz Results & Score]]></string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="math_quiz_title">Math Quiz</string>
    <string name="press_generate">Press Generate</string>
    <string name="correct_message">Correct!</string>
    <string name="wrong_message">Wrong Answer</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="period">.</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="button_generate">Generate</string>
    <string name="button_validate">Validate</string>
    <string name="button_clear">Clear</string>
    <string name="button_score">Score</string>
    <string name="button_finish">Finish</string>
</resources>